# roboboat

./: .gitignore  README.md
Dockerfiles/Dockerfile_Companion_Computer_Test/: Dockerfile  Information_for_Docker_Commands.md  docker-compose.yml  px4.launch
Dockerfiles/Dockerfile_for_ASV/: Dockerfile
Dockerfiles/Dockerfile_for_tx2/: Dockerfile
Dockerfiles/Dockerfile_for_tx2_depthai/: dockerfile
Dockerfiles/Main_Dockerfile_for_UAV/: Dockerfile
Dockerfiles/usb_cam_Dockerfile/: Dockerfile  Information_for_usb_cam.md  docker-compose.yml  entrypoint.sh
Python Scripts/: ctrl_allocation.py
darknet_ros/darknet_ros/config/: bow_ros.yaml  stern_ros.yaml  yolov3.yaml
f450_simulator/f450_description/: CMakeLists.txt  package.xml
f450_simulator/f450_description/launch/: display.launch
f450_simulator/f450_description/urdf/: component_snippets.xacro  f450.xacro  f450_base.csv  f450_base.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro  (+1 more)
f450_simulator/f450_gazebo/: CMakeLists.txt  package.xml
point_cloud_converter/launch/: point_cloud_converter.launch
roboboat/: README.md
roboboat/roboboat_concatenation/: CMakeLists.txt  package.xml
roboboat/roboboat_control/: CMakeLists.txt  README.md  package.xml
roboboat/roboboat_control/config/: navsat_config.yaml  robot_localization.yaml
roboboat/roboboat_control/launch/: control.launch
roboboat/roboboat_control/scripts/: control_allocation  controller.cpp  vel_cov
roboboat/roboboat_description/: CMakeLists.txt  package.xml
roboboat/roboboat_description/launch/: description.launch
roboboat/roboboat_description/meshes/: Sensing-Camera.stl  Sensing-GPS Antenna.stl  Sensing-Lidar.stl  base_link.STL  base_link_to_laser.STL  base_link_to_zed.STL
roboboat/roboboat_description/udrf/: actuators.xacro  sensors.xacro
roboboat/roboboat_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  roboboat.gazebo  roboboat.urdf.xacro  sensors.xacro  snippets.xacro
roboboat/roboboat_description/urdf/configs/: base
roboboat/roboboat_localization/: CMakeLists.txt  package.xml
roboboat/roboboat_mapping/: CMakeLists.txt  package.xml
roboboat/roboboat_msgs/: CMakeLists.txt  package.xml
roboboat/roboboat_msgs/msg/: MotorCommandStamped.msg
roboboat/roboboat_navigation/: CMakeLists.txt  package.xml
roboboat/roboboat_tf/: CMakeLists.txt  package.xml
roboboat_estop_comms/: CMakeLists.txt
roboboat_estop_comms/launch/: estop_comms.launch
roboboat_estop_comms/nodes/: estop_comms.py
roboboat_gazebo/: CMakeLists.txt  package.xml
roboboat_gazebo/launch/: roboboat_sim.launch  roboboat_world.launch
roboboat_gazebo/scripts/: cmd_drive_translate.py
roboboat_imu_gps/: CMakelists.txt  package.xml
roboboat_imu_gps/launch/: imu.launch
roboboat_mpc_control/roboboat_description/: package.xml
roboboat_mpc_control/roboboat_localization/: CMakeLists.txt  package.xml
roboboat_mpc_control/roboboat_msgs/: CMakeLists.txt  README.md
roboboat_mpc_control/roboboat_msgs/msg/: DesiredStates.msg  MPCOutputs.msg
roboboat_mpc_control/roboboat_navio_data/: CMakeLists.txt  README.md  package.xml
roboboat_mpc_control/roboboat_navio_data/launch/: navio_data.launch
roboboat_mpc_control/roboboat_navio_data/nodes/: roboboat_navio_gps.py
roboboat_mpc_control/roboboat_tf/: CMakeLists.txt  package.xml
roboboat_mpc_control/roboboat_thrust_mapping/: package.xml  setup.py
roboboat_mpc_control/roboboat_thrust_mapping/nodes/: roboboat_navio_thrust.py  roboboat_raw_throttle_test.py
roboboat_msgs/msg/: ctrl_msg.msg  motor_msg.msg
roboboat_navio_data/: setup.py
roboboat_navio_data/nodes/: roboboat_navio_imu.py
roboboat_simulator/roboboat_gazebo/: CMakeLists.txt  package.xml
roboboat_simulator/roboboat_simulator/: CMakeLists.txt  package.xml
roboboat_sys_id/: CMakeLists.txt  package.xml
roboboat_sys_id/launch/: sys_id.launch
roboboat_sys_id/nodes/: pure_surge0_4.py  pure_surge0_5.py  pure_surge0_6.py  pure_surge0_75.py  pure_surge0_8.py  pure_surge1.py  pure_surge1_25.py  pure_surge1_5.py  pure_surge2.py  pure_sway0_4.py  pure_sway0_5.py  pure_sway0_6.py  pure_sway0_75.py  pure_sway0_8.py  pure_sway1.py  pure_sway1_25.py  pure_sway1_5.py  pure_sway2.py  pure_yaw10.py  pure_yaw15.py  pure_yaw20.py  pure_yaw30.py  pure_yaw40.py  pure_yaw60.py  pure_yaw72.py  pure_yaw80.py  zigzag_0_5_60.py  zigzag_1_60.py  zigzag_1_90.py
roboboat_td_network_status/: CMakeLists.txt  package.xml
roboboat_td_network_status/launch/: TD_TCP_StatusServer.launch
roboboat_td_network_status/nodes/: TD_TCP_StatusServer.py
roboboat_teleop/: CMakeLists.txt  package.xml
roboboat_teleop/config/: roboboat_teleop.yaml
roboboat_teleop/launch/: joystick_teleop.launch  keyboard_teleop.launch
roboboat_thrust_mapping/: CMakeLists.txt  README.md
roboboat_thrust_mapping/launch/: raw_throttle_test.launch  thrust_mapping.launch  thrust_mapping_navio.launch
roboboat_thrust_mapping/nodes/: roboboat_raw_velocity_test.py  roboboat_thrust_mapping.py
rotors_simulator/rotors_description/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo/launch/: f450.launch  f450_hovering_example.launch  gazebo.launch  mav.launch  mav_hovering_example.launch  mav_hovering_example_with_vi_sensor.launch  spawn_mav.launch  spawn_vi_sensor.launch
rotors_simulator/rotors_gazebo/resource/: example_waypoints.txt  f450.yaml  lee_controller_f450.yaml
rotors_simulator/rotors_gazebo/src/: hovering_example.cpp
statemachine/: roboboat_sm.py
statemachine/navigation_channel_behaviors/: README.md
sysID/: CMakeLists.txt  package.xml
sysID/launch/: sys_id.launch
sysID/nodes/: pure_surge0_5.py  pure_surge0_75.py  pure_surge1.py  pure_surge1_25.py  pure_surge1_5.py  pure_surge2.py  pure_sway0_5.py  pure_sway0_75.py  pure_sway1.py  pure_sway1_25.py  pure_sway1_5.py  pure_sway2.py  pure_yaw20.py  pure_yaw30.py  pure_yaw40.py  pure_yaw60.py  pure_yaw72.py  pure_yaw80.py  zigzag_1_60.py  zigzag_1_90.py
sysID/scripts/: pure_surge1.py  pure_sway1.py  pure_yaw7.py  zigzag_1_7.py
(+91 files in other folders)
