<?xml version="1.0"?>
<package>
  <name>roboboat_gazebo</name>
  <version>0.0.1</version>
  <description>Simulator package for Roboboat</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="crawlab@todo.todo">crawlab</maintainer>
  <author email="benarmentor@gmail.com">Benjamin Armentor</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>uuv_gazebo_ros_plugins_msgs</run_depend>
  <run_depend>roboboat_msgs</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

  <export>
  </export>
</package>
