<?xml version="1.0"?>
<package format="2">
  <name>roboboat_td_network_status</name>
  <version>0.0.2</version>
  <description>The status server for communication with the TD</description>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="joshua.vaughan@lousiana.edu">Joshua Vaughan</author>
  
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="joshua.vaughan@lousiana.edu">Joshua Vaughan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/CRAWlab/roboboat</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
