<?xml version="1.0"?>
<package format="2">
  <name>roboboat_sys_id</name>
  <version>0.0.0</version>
  <description>system Identification package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="adam.smith2@louisiana.edu">Adam Smith</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/CRAWlab/roboboat</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="adam.smith2@louisiana.edu">Adam Smith</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


</package>
