<?xml version="1.0"?>
<package format="2">
  <name>roboboat_control</name>
  <version>0.0.1</version>
  <description>Control package for Roboboat</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="crawlab@todo.todo">crawlab</maintainer>
  <author email="benarmentor@gmail.com">Benjamin Armentor</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>