<?xml version="1.0"?>
<package format="2">
  <name>roboboat_control</name>
  <version>0.0.1</version>
  <description>Control package for Roboboat</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="crawlab@todo.todo">crawlab</maintainer>
  <author email="benarmentor@gmail.com">Benjamin Armentor</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rtabmap_ros</build_depend>
  <build_depend>rtabmap</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap</exec_depend>
  
</package>