<package format="2">
  <name>roboboat_navio_data</name>
  <version>0.0.1</version>
  <description>Package that provides data parsing from the Navio2, using its Python API.</description>

  <maintainer email="joshua.vaughan@louisiana.edu">Joshua Vaughan</maintainer>

  <author>Joshua Vaughan</author>

  <license>TODO</license>

  <url type="website"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rospy</exec_depend>  
  <exec_depend>sensor_msgs</exec_depend>
  
</package>
